<resources>
    <string name="app_name">Notes_AndroidStudio3_Android</string>

    <string name="action_settings">Settings</string>
<<<<<<< HEAD
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="title">Title</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="pause_audio">Play Audio</string>
    <string name="see_on_map">See on Map</string>
    <string name="todo">TODO</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="sort_your_notes">Sort your Notes</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="sort_by_date_time">Sort by Date/Time</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_category">Enter Category</string>
    <string name="camera">Camera</string>
    <string name="audio">Audio</string>
    <string name="audio_attached">Audio Attached</string>
=======
    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>
>>>>>>> f6f1d5bb6bc7d8a233865e3251b13c9565be6714
</resources>