<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_note_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_10"

        android:background="@drawable/bg_corner"
        >
        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_title"
            android:inputType="text"
            android:lines="4"

            android:backgroundTint="@android:color/transparent"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_enter_note"
            android:textSize="@dimen/input_new_note"
            android:autofillHints="" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_10"

        android:background="@drawable/bg_corner"
        >
    <EditText
        android:id="@+id/desc_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:gravity="center"
        android:hint="@string/enter_description"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:backgroundTint="@android:color/transparent"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note"
        android:autofillHints="" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_10"

        android:background="@drawable/bg_corner"
        >
    <EditText
        android:id="@+id/category_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_category"
        android:inputType="text"
        android:lines="4"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note"
        android:autofillHints="" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        android:layout_margin="@dimen/dimen_10"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio_attached"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dimen_10"

        >

        <Button
            android:id="@+id/camera_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/camera"
            />

        <Button
            android:id="@+id/audio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audio"
            android:layout_marginStart="@dimen/dimen_10"
            />


    </LinearLayout>
</LinearLayout>